[tool.poetry]
name = "rtpusher"
version = "1.6.0.dev1"
description = "Realtime Pusher"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.scripts]
rtpusher = "rtpusher:cli"

[tool.poetry.dependencies]
python = "^3.9"
aiomqtt = "^2.1.0"
pynmea2 = "^1.19.0"
PyYAML = "^6.0.1"
cryptojwt = "^1.8.3"
pendulum = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
ruff = "^0.6.6"
pytest-ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
