[tool.poetry]
name = "rtpusher"
version = "1.6.0.dev1"
description = "Realtime Pusher"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.scripts]
rtpusher = "rtpusher:cli"

[tool.poetry.dependencies]
python = "^3.9"
aiomqtt = "^1.2.1"
pynmea2 = "^1.19.0"
PyYAML = "^6.0.1"
cryptojwt = "^1.9.2"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-ruff = "^0.4.1"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
