[project]
name = "rtpusher"
description = "Realtime Pusher"
license = "BSD-2-Clause"
dynamic = ["version"]
requires-python = "<4.0,>=3.11"
authors = [
    {name = "Bobcat Ticketing Solutions AB"},
]
dependencies = [
    "aiomqtt>=2.4.0",
    "cryptojwt>=1.10.0",
    "pendulum>=3.1.0",
    "pynmea2>=1.19.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
rtpusher = "rtpusher:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-ruff>=0.5",
    "ruff>=0.13.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501", "I001", "SIM102"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
